--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # vscode
-/.vscode
+.vscode/
 
 # python
 *.cpython-38*
@@ -9,7 +9,7 @@
 */__pycache__/*
 
 # venv
-/venv
+venv/
 
 # dependencies
 /node_modules
@@ -32,4 +32,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.vscode/settings.json
